# encoder_AaP

./: CMakeLists.txt  Doxyfile  README.md  ctext.txt  encoder_test.cpp  main.cpp  text1.txt
gamma_ciphers/: VernameCipher.cpp
substitution_ciphers/: AffineRecurrentCipher.cpp
work_folder/: SubFunctions.cpp  SubFunctions.h  SubFunctions.hpp  files_functions.cpp  files_functions.h  globals.cpp  globals.h  globals.hpp
work_folder/block_ciphers/: BlockCipher.cpp  BlockCipher.h
work_folder/block_ciphers/hill_cipher/: HillCipher.cpp  HillCipher.h
work_folder/block_ciphers/hill_recurrent/: HillRecurrentCipher.cpp  HillRecurrentCipher.h
work_folder/gamma_ciphers/: GammaCipher.cpp  GammaCipher.h
work_folder/gamma_ciphers/VernamCipher/: VernamCipher.cpp  VernamCipher.h
work_folder/gamma_ciphers/VernameCipher/: VernameCipher.cpp  VernameCipher.h
work_folder/gamma_ciphers/vigenere_cipher/: VigenereCipher.cpp  VigenereCipher.h  VigenereCipher.hpp
work_folder/gamma_ciphers/vigenere_cipher/VigenereCipherTextGamma/: VigenereCipherTextGamma.cpp  VigenereCipherTextGamma.h
work_folder/gamma_ciphers/vigenere_cipher/VigenereOpenTextGamma/: VigenereOpenTextGamma.cpp  VigenereOpenTextGamma.h
work_folder/gamma_ciphers/vigenere_cipher/VigenereRepetitionGamma/: VigenereRepetitionGamma.cpp  VigenereRepetitionGamma.h
work_folder/gamma_ciphers/vigenere_cipher/gamma_generation/ciphertext_gamma/: CiphertextGamma.cpp  CiphertextGamma.h
work_folder/gamma_ciphers/vigenere_cipher/gamma_generation/opentext_gamma/: OpentextGamma.cpp  OpentextGamma.h  OpentextGamma.hpp
work_folder/gamma_ciphers/vigenere_cipher/gamma_generation/repetition_gamma/: RepetitionGamma.cpp  RepetitionGamma.h  RepetitionGamma.hpp
work_folder/substitution_ciphers/: SubstitutionCipher.cpp  SubstitutionCipher.h  SubstitutionCipher.hpp
work_folder/substitution_ciphers/affine/: AffineCipher.cpp  AffineCipher.h
work_folder/substitution_ciphers/affine_recurrent/: AffineRecurrentCipher.cpp  AffineRecurrentCipher.h  AffineRecurrentCipher.hpp
work_folder/substitution_ciphers/caesar/: CaesarCipher.cpp  CaesarCipher.h  CaesarCipher.hpp
